--- a/src/assets/styles/01_base/_04_responsive.scss
+++ b/src/assets/styles/01_base/_04_responsive.scss
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1920px) {
+    .home {
+        .row {
+            .home-info {
+                .home-title {
+                }
+            }
+        }
+    }
+}
 @media screen and (max-width: 1660px) {
     .home {
         .row {
@@ -5,7 +15,7 @@
                 justify-content: flex-start;
                 align-items: flex-start;
                 .home-title {
-                    @include h3;
+                    margin: 1.5em 0 0 0;
                     span.name {
                         margin: 0 10px 0 0;
                         font-size: 32px;
@@ -13,16 +23,14 @@
                 }
 
                 .home-card {
+                    position: static;
+                    top: 0em;
                     &_group {
                         margin: 0.65em 0 1em 0;
-                        .presentation_title,
-                        .presentation_typing {
-                            font-size: 1.75em;
-                        }
                     }
 
                     .home-card-content {
-                        font-size: 1.15em;
+                        font-size: 1.125em;
                         margin: 0;
                     }
                 }
@@ -45,7 +53,7 @@
     }
     .home {
         .row {
-            min-width: 100%;
+            min-width: calc(100% - 20px);
             justify-content: space-between;
             gap: 7.2%;
             padding: 2em 0 0 0;
@@ -116,6 +124,7 @@
 @media screen and (max-width: 1320px) {
     .home {
         .row {
+            // min-width: 100%;
             .home-info {
                 .home-card {
                     .home-card-content {
@@ -141,8 +150,6 @@
                     max-width: 48.19645785503444%;
                     margin-top: 3.4em;
                     & .skill-item {
-                        // @include flex_100;
-                        // margin-bottom: 1.5625em;
                         & h4 {
                             @include h5;
                             line-height: 1.71em;
@@ -195,6 +202,7 @@
 // @media screen and (max-width: 1280px) {
 //     .home {
 //         .row {
+//           min-width: calc(100% - 0px);
 //             .home-info {
 //                 justify-content: center;
 //                 .home-title {
@@ -203,40 +211,48 @@
 //                     top: 0;
 //                     margin: 0;
 //                     width: 100%;
-//                     text-align: right;
 //                     padding: 12px 1em;
+
+
+//                     text-align: center;
+//                     top: 0.75em;
 //                     span.name {
 //                         text-align: center;
 //                         width: 100%;
 //                     }
 //                 }
-
+  
 //                 .home-card {
 //                     align-items: center;
+                    
+
+
+//                     position: relative;
+//                     top: 0.7em;
 //                     &_group {
-//                         margin: 1.25em 0;
+//                         margin: 1.5em 0;
 //                         .presentation_title,
 //                         .presentation_typing {
 //                             text-align: center;
 //                             align-items: center;
-//                             font-size: 1.5em;
+                          
 //                         }
-
+  
 //                         .typing {
 //                             width: 100%;
 //                             align-items: center;
 //                         }
 //                     }
-
+  
 //                     .home-card-content {
 //                         margin: 1em 1em 0 1em;
-
+  
 //                         &_description {
 //                             .home-quote {
-//                                 text-align: center;
+//                               //   text-align: center;
 //                                 width: 100%;
 //                                 display: block;
-
+  
 //                                 margin: 0 auto;
 //                                 padding: 0;
 //                             }
@@ -256,6 +272,7 @@
 //         }
 //     }
 // }
+
 // @media screen and (max-width: 1080px) {
 //     .home {
 //         .row {
@@ -263,7 +280,6 @@
 //             border: 1px solid var(--bg-black-50);
 //             top: 0;
 //             padding: 0 0.5em 50px 0.5em;
-//             min-height: 75vh;
 //             min-height: 826.48px;
 //             .home-info {
 //                 position: static;
@@ -281,6 +297,8 @@
 //                     justify-content: flex-start;
 //                     width: 100%;
 //                     margin: 0;
+//                     position: static;
+//                     top: 0;
 //                     &_group {
 //                         width: 100%;
 //                         text-align: center;
@@ -301,13 +319,14 @@
 //                         &_description {
 //                             text-align: center;
 //                             .home-quote {
+//                                 text-align: center;
 //                                 position: static;
 //                                 margin: 0 auto 0.675em;
 //                                 padding: 0;
 //                                 display: inline-block;
 //                             }
 //                             .quote-description {
-//                                 // margin: 0 1em;
+//                                 margin: 0 1em;
 //                             }
 //                         }
 //                         .content-inner {
@@ -351,26 +370,30 @@
 //             margin: auto;
 //             bottom: 5.1vh;
 //             left: 0px;
-//             height: calc(45vh - 413px);
 //         }
 //     }
 //     @media screen and (max-height: 1180px) {
 //         .bgDraw2 {
-//             position: absolute;
-//             min-height: calc(50vh - 412.5px);
 //             bottom: 0px !important; 
 //             .tsparticles2,
 //             #tsparticles2 {
 //                 width: 100% !important;
-//                 height: 100% !important;
+//                 height: calc(50vh - 404px) !important;
 //                 bottom: 0px !important; 
 //                 left: 0 !important; 
 //             }
 //         }
+
 //     }
 //     @media screen and (min-height: 1180px) {
 //         .bgDraw2 {
-//             height: calc(45vh - 410px);
+//             .tsparticles2,
+//             #tsparticles2 {
+//                 width: 100% !important;
+//                 height: calc(50vh - 470px) !important;
+//                 bottom: 0px !important; 
+//                 left: 0 !important; 
+//             }
 //         }
 //     }
 // }
